# snake

./: .gitignore  Cargo.toml  README.md
src/: common.rs  main.rs  menu.rs  score.rs  snake.rs
