[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.17.0"
rand = "0.8.5"
bevy_utils = "0.9.1"


[dependencies.bevy]
version = "0.9.1"
features = [
    "wav"
]